--- a/project.config.json
+++ b/project.config.json
@@ -1,6 +1,7 @@
 {
 	"description": "项目配置文件",
-	"cloudfunctionRoot":"cloud",
+	"cloudfunctionRoot": "/cloud",
+	"miniprogramRoot":"/miniProgram",
 	"packOptions": {
 		"ignore": []
 	},
@@ -35,6 +36,7 @@
 	"isGameTourist": false,
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
+	"cloudfunctionTemplateRoot": "cloudfunctionTemplate",
 	"condition": {
 		"search": {
 			"current": -1,
