--- a/project.config.json
+++ b/project.config.json
@@ -1,6 +1,7 @@
 {
 	"description": "项目配置文件",
-	"cloudfunctionRoot":"cloud",
+	"cloudfunctionRoot":"/cloud",
+	"miniprogramRoot":"/miniProgram",
 	"packOptions": {
 		"ignore": []
 	},
