--- a/miniProgram/app.json
+++ b/miniProgram/app.json
@@ -3,7 +3,9 @@
     "pages/index/index",
     "pages/logs/logs",
     "pages/home/home",
-    "pages/admin/admin"
+    "pages/admin/admin",
+    "pages/pulldown/pulldown",
+    "pages/addmovie/addmovie"
   ],
   "window": {
     "backgroundTextStyle": "light",
