--- a/project.config.json
+++ b/project.config.json
@@ -29,7 +29,7 @@
 			"outputPath": ""
 		},
 		"useIsolateContext": true,
-		"useCompilerModule": true,
+		"useCompilerModule": false,
 		"userConfirmedUseCompilerModuleSwitch": false
 	},
 	"compileType": "miniprogram",
@@ -78,6 +78,20 @@
 					"id": -1,
 					"name": "home",
 					"pathName": "pages/home/home",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pulldown",
+					"pathName": "pages/pulldown/pulldown",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "addmovie",
+					"pathName": "pages/addmovie/addmovie",
 					"scene": null
 				}
 			]
